# duello

./: .gitignore  README.md  keys_rsa  keys_rsa.pub  manage.py  pyproject.toml  setup.cfg
duello/: asgi.py  celery.py  conftest.py  settings.py  urls.py  wsgi.py
duello/cage/: apps.py  facade.py  models.py  urls.py  views.py
duello/cage/migrations/: 0001_initial.py  0002_question_cages_question_creator_question_description_and_more.py  0003_cage_participants.py
duello/cage/serializers/: __init__.py  answer_serializer.py  cage_serializer.py  question_serializer.py
duello/cage/tests/: test_cage_services.py  test_question_services.py
duello/custom_auth/: apps.py  facade.py  jobs.py  models.py  urls.py  views.py
duello/custom_auth/management/commands/: populate_user_roles.py
duello/custom_auth/migrations/: 0001_initial.py  0002_claims_rename_user_users_roles.py  0003_users_role_id.py
duello/custom_auth/serializers/: __init__.py  claims_serializer.py  roles_serializer.py  user_serializer.py
duello/custom_auth/tests/: test_jwt_handler.py
